# Project04-Chain-Sentinel

./: .env.example  .gitignore  COMMANDS.md  README.md  __init__.py  package.json  pyproject.toml  requirements.txt  run.sh  setup.sh
.github/workflows/: ci.yml
cli/: monitor_cli.py  trace_cli.py
config/: exchanges.py  settings.py  wallets.example.json  wallets.json
core/: analyser.py  differ.py  fetcher.py  pricer.py
reports/: builder.py  docx_writer.js  summary_writer.py  txt_writer.py
storage/: report_store.py  trace_store.py  wallet_store.py
tests/: conftest.py  test_analyser.py  test_classifier.py  test_differ.py
tracer/: classifier.py  hop_engine.py  narrative.py
