[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chainsentinel"
version = "1.0.0"
description = "ETH wallet monitoring, spike detection, hop tracing and forensic reporting"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
sentinel-monitor = "chainsentinel.cli.monitor_cli:run"
sentinel-trace   = "chainsentinel.cli.trace_cli:run"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
